<resources>
    <string name="app_name">DhikrWave</string>
    <string name="txt_judul_fitur">Doa &amp; Dzikir Sehari-Hari</string>
    <string name="txt_sunnah_qauliyah">Doa Ketika Shalat</string>
    <string name="txt_dzikir_setiap_saat">Dzikir Setelah Shalat</string>
    <string name="txt_dzikir_doa_harian">Dzikir &amp; Doa Harian</string>
    <string name="txt_dzikir_pagi_petang"><![CDATA[Dzikir Pagi & Petang]]></string>
    <string name="txt_dzikir_pagi">Dzikir Pagi</string>
    <string name="txt_dzikir_petang">Dzikir Petang</string>
    <string name="content_txt_icon_dzikir_pagi_petang">Icon Dzikir Pagi Petang</string>
    <string name="content_txt_icon_dzikir_doa_harian">Icon Dzikir Doa Harian</string>
    <string name="content_txt_icon_dzikir_setiap_saat">Icon Dzikir Setiap Saat</string>
    <string name="content_txt_icon_qauliyah_shalat">Icon Qauliyah Shalat</string>
    <string name="content_txt_icon_btn_dzikir_pagi">Icon btn dzikir Pagi</string>
    <string name="content_txt_icon_btn_dzikir_petang">Icon btn Dzikir Petang</string>
    <string name="content_txt_icon_image_for_background_dzikir">Icon image for Background Dzikir</string>
    <string name="content_txt_image_artikel">Image Poster Detail Artikel</string>
    <string name="artikel_islami">Artikel</string>
    <string name="name">Nama saya Ghadiza Naura Aliya</string>
    <string name="btn_icon_desc">Button Dzikir Ketika Salat</string>
    <string-array name="arr_img_artikel">
        <item>@drawable/artikel_1</item>
        <item>@drawable/artikel_2</item>
        <item>@drawable/artikel_3</item>
        <item>@drawable/artikel_4</item>
        <item>@drawable/artikel_5</item>
        <item>@drawable/artikel_6</item>
        <item>@drawable/artikel_7</item>
        <item>@drawable/artikel_8</item>
    </string-array>
    <string-array name="arr_title_artikel">
        <item>Sedekah Adalah Bukti Keimanan</item>
        <item>Amalan Yang Tidak Akan Terputus</item>
        <item>Jika Melihat Orang Yang Terkena Musibah</item>
        <item>Childfree Dalam Pandangan Islam</item>
        <item>Tidak Ada Yang Lebih Baik Daripada Sabar</item>
        <item>Allah Menghendaki Kebaikan Untukmu</item>
        <item>Skala Prioritas Dalam Berdoa</item>
        <item>Berbakti Saat Orang Tua Sudah Meninggal</item>
    </string-array>
</resources>