<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PagiPetangDzikrActivity"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_dzikr_pagi_petang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_menu"
        android:fontFamily="@font/productsans_medium"
        android:text="@string/txt_dzikir_pagi_petang"
        android:textColor="@color/teal_700"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="bottom"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_dzikr_pagi"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_dzikr_pagi_petang"
        app:layout_constraintBottom_toTopOf="@+id/cv_dzikr_pagi"
        android:layout_marginTop="32dp"
        tools:ignore="NotSibling">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_morning"
            android:contentDescription="@string/content_txt_icon_image_for_background_dzikir"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_700"
            android:padding="8dp"
            android:fontFamily="@font/productsans_medium"
            android:text="@string/txt_dzikir_pagi"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <ImageButton
            android:id="@+id/img_btn_dzikr_pagi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/bg_btn_dzikr"
            android:background="@android:color/transparent"
            android:contentDescription="@string/content_txt_icon_btn_dzikir_pagi"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_dzikr_petang"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_dzikr_pagi">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_evening"
            android:contentDescription="@string/content_txt_icon_dzikir_pagi_petang"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_700"
            android:padding="8dp"
            android:fontFamily="@font/productsans_medium"
            android:text="@string/txt_dzikir_petang"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <ImageButton
            android:id="@+id/img_btn_dzikr_petang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/bg_btn_dzikr"
            android:background="@android:color/transparent"
            android:contentDescription="@string/content_txt_icon_btn_dzikir_petang"/>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>